@@ -9,11 +9,10 @@ This page is a static template for you to replace with your own content, you can
 </pre>
 
 <p>
-If you've installed
-the <a href="http://trac.seagullproject.org/wiki/Modules">Publisher module</a> then
-<a href="{makeUrl(##,#login#,#user#)}">login as admin</a> or a privileged user and start creating your own content.
+You can now
+<a href="{makeUrl(##,#login#,#user#)}">login as admin</a> and start creating your own content.
 </p>
-
+<hr />
 <p>
 The Seagull framework is an
 OO <a href="http://php.net" title="PHP"><acronym title="PHP: Hypertext Preprocessor">PHP</acronym></a>
